modify diffusion framework